<resources>

    <!-- General Strings -->
    <string name="app_name">The Room</string>
    <string name="facebook_app_id">189456694939040</string>
    <string name="fb_login_protocol_scheme">fb189456694939040</string>

    <!-- Login Activity -->
    <string name="login_status_text">Signing in...</string>

    <!-- Main Activity -->
    <string name="new_chat_button_label">New Chat</string>
    <string name="coversations_button_label">Conversations</string>
    <string name="profile_button_label">Profile</string>

    <!-- New Chat Activity -->
    <string name="new_chat_activity_title">New Chat</string>
    <string name="new_chat_text">Looking for new user...</string>
    <string name="new_chat_cancel">Cancel</string>

    <!-- Conversation List Activity -->
    <string name="conversation_list_activity_title">Conversations</string>
    <string name="conversation_list_row_start_time_text">Start Time: %1$d</string>
    <string name="loading_list_text">Loading Conversations...</string>

    <!-- Profile Activity -->
    <string name="profile_activity_title">Profile</string>
    <string name="interests_label">Interests</string>
    <string name="interests_description">Any interests you select are used to better pair you with other users. At least one must be selected in order to match you to other users.</string>
    <string name="interest1">Interest 1</string>
    <string name="interest2">Interest 2</string>
    <string name="interest3">Interest 3</string>
    <string name="interest4">Interest 4</string>
    <string name="interest5">Interest 5</string>
    <string name="interest6">Interest 6</string>
    <string name="interest7">Interest 7</string>
    <string name="interest8">Interest 8</string>
    <string name="interest9">Interest 9</string>
    <string name="interest10">Interest 10</string>

    <!-- Settings Activity -->
    <string name="settings_activity_title">Settings</string>

    <!-- Chat Activity -->
    <string name="chat_activity_title">Chat with %1$s</string>

    <!-- Onboarding Activity -->
    <string name="onboarding_activity_title">Onboarding</string>
    <string name="display_name_label">Display Name</string>
    <string name="display_name_description">Your name that other users will see.</string>
    <string name="display_name_hint">Username</string>
    <string name="select_interests_label">Select Interests</string>
    <string name="select_interests_description">Any interests you select are used to better pair you with other users. At least one must be selected in order to match you to other users.</string>
    <string name="onboarding_continue_button">Continue</string>

    <!-- Empty List View -->
    <string name="empty_list_text">No conversations. Select \'New Chat\' from the main menu to start one.</string>

    <!-- Main Option Menu -->
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>

    <string name="TestText">Test Text</string>
=======
    <!-- Location Activity -->
    <string name="location_activity_title">Share Location</string>
    <string name="confirm_share_location_button">Share Location</string>
    <string name="cancel_share_location_button">Share Location</string>
    <string name="share_location_initial_message">Do you want to share your location with %1$s so that you can meet?</string>
    <string name="share_location_waiting_message">Waiting for %1$s to accept location sharing...</string>
    <string name="share_location_confirm_message">%1$s has requested to share their location with you so that you can meet. Do you want to share your location?</string>

    <string name="map_activity_title">%1$s\'s Location</string>

</resources>
