<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:layout_marginTop="20dp"
    tools:context="com.example.android.theroom.MainActivity">

    <ImageView
        android:layout_width="243dp"
        android:layout_height="206dp"
        android:src="@drawable/applogo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_chat_button_label"
            android:onClick="newChat"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coversations_button_label"
            android:onClick="viewConversations"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_button_label"
            android:onClick="viewProfile"
            android:layout_margin="8dp"/>

    </LinearLayout>

</LinearLayout>
